Modify footer in mbl view, add target_blank for itunes link in all artists

--- a/agnesobel.html
+++ b/agnesobel.html
@@ -77,20 +77,20 @@
 
           <ul>
             <li>
-              <a href="https://music.apple.com/ie/album/myopia/1483221211"
+              <a href="https://music.apple.com/ie/album/myopia/1483221211" target="_blank"
                 >Agnes Obel : Myopia</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/ie/album/citizen-of-glass/1132114456"
+                href="https://music.apple.com/ie/album/citizen-of-glass/1132114456" target="_blank"
                 >Agnes Obel: Citizen of Glass</a
               >
             </li>
             <li>
               <a
                 href="https://music.apple.com/ie/album/philharmonics-deluxe-edition/431226423"
-                >Agnes Obel: Philharmonics
+                target="_blank">Agnes Obel: Philharmonics
               </a>
             </li>
           </ul>
