--- a/anebrun.html
+++ b/anebrun.html
@@ -70,19 +70,19 @@
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/a-temporary-dive/1444039380"
+              <a href="https://music.apple.com/us/album/a-temporary-dive/1444039380" target="_blank"
                 >Ane Brun: A Temporary Dive</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/after-the-great-storm/1536058335"
+                href="https://music.apple.com/us/album/after-the-great-storm/1536058335" target="_blank"
                 >Ane Brun: After The Great Storm</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/how-beauty-holds-the-hand-of-sorrow/1540218244"
+                href="https://music.apple.com/us/album/how-beauty-holds-the-hand-of-sorrow/1540218244" target="_blank"
                 >Ane Brun:: How Beauty Holds the hand of Sorrow
               </a>
             </li>
