--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
     <span>Country</span>
      </div>
     <div class="inputbox">
-    <input type="email" name="" required="required">
+    <input type="text" name="" required="required">
     <span>Email</span>
      </div>
     <div class="inputbox">
