--- a/elperrodelmar.html
+++ b/elperrodelmar.html
@@ -70,19 +70,19 @@
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/kokoro/1120259121"
+              <a href="https://music.apple.com/us/album/kokoro/1120259121" target="_blank"
                 >El Perro Del Mar : Kokoro</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/el-perro-del-mar-deluxe-edition/960508349"
+                href="https://music.apple.com/us/album/el-perro-del-mar-deluxe-edition/960508349" target="_blank"
                 >El Perro Del Mar : DeLuxe Edition</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/pale-fire/568238219"
+                href="https://music.apple.com/us/album/pale-fire/568238219" target="_blank"
                 >El Perro Del Mar : Pale Fire
               </a>
             </li>
