--- a/feverray.html
+++ b/feverray.html
@@ -72,19 +72,19 @@ Dreijer's vocal style is notable for both shrill and deep tones, and also the us
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/fever-ray-deluxe-version/828094246"
+              <a href="https://music.apple.com/us/album/fever-ray-deluxe-version/828094246" target="_blank"
                 >Fever Ray: Deluxe Edition</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/plunge/1299148287"
+                href="https://music.apple.com/us/album/plunge/1299148287" target="_blank"
                 >Fever Ray:  Plunge</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/when-i-grow-up/828249639"
+                href="https://music.apple.com/us/album/when-i-grow-up/828249639" target="_blank"
                 >Fever Ray:  When I grow up
               </a>
             </li>
