--- a/hannehukkelberg.html
+++ b/hannehukkelberg.html
@@ -76,19 +76,19 @@ In 2006 Hukkelberg released her second album Rykestrasse 68. The album was award
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/birthmark/1465026547"
+              <a href="https://music.apple.com/us/album/birthmark/1465026547" target="_blank"
                 >Hanne Hukkelberg : BirthMark</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/trust/1345701528"
+                href="https://music.apple.com/us/album/trust/1345701528" target="_blank"
                 >Hanne Hukkelberg : Trust</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/featherbrain/1345690810"
+                href="https://music.apple.com/us/album/featherbrain/1345690810" target="_blank"
                 >Hanne Hukkelberg : Featherbrain
               </a>
             </li>
