--- a/jennieabrahamson.html
+++ b/jennieabrahamson.html
@@ -74,19 +74,19 @@ With the support of his friends Friska Viljor and Ane Brun , Abrahamson founded 
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/the-sound-of-your-beating-heart/431584842"
+              <a href="https://music.apple.com/us/album/the-sound-of-your-beating-heart/431584842" target="_blank"
                 >Jennie Abrahamson : The Sound of your beating heart</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/reverseries/1252029612"
+                href="https://music.apple.com/us/album/reverseries/1252029612" target="_blank"
                 >Jennie Abrahamson : Reverseries</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/gemini-gemini/976956430"
+                href="https://music.apple.com/us/album/gemini-gemini/976956430" target="_blank"
                 >Jennie Abrahamson : Gemini Gemini
               </a>
             </li>
