--- a/ninakinert.html
+++ b/ninakinert.html
@@ -76,17 +76,17 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/romantic/1521737817"
+              <a href="https://music.apple.com/us/album/romantic/1521737817" target="_blank"
                 >Nina Kinert : Romantic</a
               >
             </li>
             <li>
-              <a            href="https://music.apple.com/us/album/pets-friends/815058840">
+              <a            href="https://music.apple.com/us/album/pets-friends/815058840"> target="_blank"
                 Nina Kinert : Pets and Friends  </a>
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/let-there-be-love/815051871"
+                href="https://music.apple.com/us/album/let-there-be-love/815051871" target="_blank"
                 >Nina Kinert : Let there be love
               </a>
             </li>
