--- a/olivera.html
+++ b/olivera.html
@@ -76,7 +76,7 @@ Olivera has also worked as a songwriter and a featuring artist for names like Ti
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/artist/olivera/205071714"
+              <a href="https://music.apple.com/us/artist/olivera/205071714" target="_blank"
                 >Olivera : various tracks </a
               >
             </li>
