--- a/siljenes.html
+++ b/siljenes.html
@@ -72,13 +72,13 @@ Nes has a background as a classical pianist. On her albums she plays all instrum
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/opticks-bonus-version/917547878"
+              <a href="https://music.apple.com/us/album/opticks-bonus-version/917547878" target="_blank"
                 >Silje Nes : Opticks</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/ames-room/917539887"
+                href="https://music.apple.com/us/album/ames-room/917539887" target="_blank"
                 >Silje Nes : Ame's room</a
               >
             </li>
