--- a/stinanordenstam.html
+++ b/stinanordenstam.html
@@ -74,19 +74,19 @@ Nordenstam is also accomplished in fields such as photography and music video di
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/and-she-closed-her-eyes/968067459"
+              <a href="https://music.apple.com/us/album/and-she-closed-her-eyes/968067459" target="_blank"
                 >Stina Nordenstam : And She Closed Her Eyes</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/this-is-stina-nordenstam/1458137632"
+                href="https://music.apple.com/us/album/this-is-stina-nordenstam/1458137632" target="_blank"
                 >Stina Nordenstam : This is Stina Nordenstam</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/the-world-is-saved/1444185970"
+                href="https://music.apple.com/us/album/the-world-is-saved/1444185970" target="_blank"
                 >Stina Nordenstam : The World is Saved
               </a>
             </li>
