--- a/susannesundfor.html
+++ b/susannesundfor.html
@@ -72,19 +72,19 @@ Her third studio album, The Silicone Veil (2012) topped the Norwegian album char
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/ten-love-songs/932429221"
+              <a href="https://music.apple.com/us/album/ten-love-songs/932429221" target="_blank"
                 >Susanne Sundfor : Ten Love Songs</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/music-for-people-in-trouble/1235818894"
+                href="https://music.apple.com/us/album/music-for-people-in-trouble/1235818894" target="_blank"
                 >Susanne Sundfor : Music for people in trouble</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/take-one/604938676"
+                href="https://music.apple.com/us/album/take-one/604938676" target="_blank"
                 >Susanne Sundfor : Take One
               </a>
             </li>
