--- a/tinadico.html
+++ b/tinadico.html
@@ -72,19 +72,19 @@ In Denmark she performs both under her real name, Tina Dickow, and under the ado
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/fastland/1406272717"
+              <a href="https://music.apple.com/us/album/fastland/1406272717" target="_blank"
                 >Tina Dico : Fastland</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/whispers/884047834"
+                href="https://music.apple.com/us/album/whispers/884047834" target="_blank"
                 >Tina Dico : Whispers </a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/where-do-you-go-to-disappear/551600478"
+                href="https://music.apple.com/us/album/where-do-you-go-to-disappear/551600478" target="_blank"
                 >Tina Dico : Where do you go to disappear
               </a>
             </li>
